--- a/hackathon/src/index.html
+++ b/hackathon/src/index.html
@@ -4,7 +4,12 @@
   <meta charset="utf-8">
   <title>Hackathon</title>
   <base href="/">
+  <style type="text/css">
 
+  </style>
+  <script>
+
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
